# attentionInCode

./: .gitignore  11-deepseek-sparse-attention.ipynb  BASE_EXPERIMENTS.md  FLASH_ATTENTION_COMPARISON.md  TEACHER.md  changelog.md  exp02_A100_results.txt  exp02_B200_results.txt  exp02_H100_results.txt  exp03_A100_results.txt  exp03_B200_results.txt  exp03_H100_results.txt  exp04_A100_results.txt  exp04_B200_results.txt  exp04_H100_results.txt  exp05_A100_results.txt  exp05_B200_results.txt  exp05_H100_results.txt  exp06_A100_results.txt  exp06_B200_results.txt  exp06_H100_results.txt  exp07_A100_results.txt  exp07_B200_results.txt  exp07_H100_results.txt  exp08_A100_results.txt  experiment_results_dashboard.html  experiment_results_report.md  fp16_gemm_0_deep_dive.md  pyproject.toml  requirements.txt
06_fused_attention/: TUTORIAL_06_FUSED_ATTENTION_SUMMARY.md  modal_triton_fused_attention.py  modal_triton_fused_attention_experiments.py  modal_triton_fused_attention_experiments_v2.py
11_deepseek_sparse_attention/: TUTORIAL_11_DEEPSEEK_SPARSE_ATTENTION_SUMMARY.md  __init__.py  dsa_runtime.py  flash_sparse_bwd.py  flash_sparse_fwd.py  modal_attention.py  modal_indexer.py  modal_triton_dsa.py  modal_triton_dsa_experiments.py
attention_in_code/: __init__.py
base_experiments/: modal_base_exp_01_fa2_ampere.py  modal_base_exp_02_fmha_cpp_ampere.py  modal_base_exp_03_fa3_hopper.py
cutlass_references/: CUTLASS_CUTE_DSL_STUDY_ORDER.md  INDEX.md
docs/: swa_global_attention_eda_plan.md  swa_global_attention_eda_report.md
experiments/: __init__.py
(+108 files in other folders)
