[project]
name = "attention-in-code"
version = "0.1.0"
description = "Deep dive into attention mechanisms and GPU optimization"
requires-python = ">=3.11"
dependencies = [
    "torch==2.11.0",
    "triton==3.6.0",
    "nvidia-cutlass-dsl",
    "matplotlib",
    "pandas",
    "pytest",
]

[project.optional-dependencies]
modal = ["modal>=1.0,<2"]

[dependency-groups]
dev = ["ruff>=0.12,<1"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["attention_in_code"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
